--- a/templates/home.html
+++ b/templates/home.html
@@ -180,4 +180,4 @@
 <!-- Script -->
 <script>
   function showSplash(callback) {
-    const splash = document.getElementById
+    const splash = document.getElementById("s
