--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
-
-<div class="container">
-  <h1 class="neon-text big-title">Login</h1>
-
-  <div class="card">
-    <form method="post" action="{{ url_for('login') }}">
-      <label for="username" class="neon-text">Username</label>
-      <input type="text" id="username" name="username" required>
-
-      <label for="password" class="neon-text">Password</label>
-      <input type="password" id="password" name="password" required>
-
-      <button type="submit" class="btn">Login</button>
-    </form>
+<h1 class="neon-text big-title">Login</h1>
+<form method="POST">
+  <div class="neon-field">
+    <label class="neon-label" for="username">Username</label>
+    <input type="text" id="username" name="username" class="neon-input" placeholder="Enter your username">
   </div>
+  <div class="neon-field">
+    <label class="neon-label" for="password">Password</label>
+    <input type="password" id="password" name="password" class="neon-input" placeholder="Enter your password">
+  </div>
+  <button type="submit" class="btn">Login</button>
+</form>
+{% endblock %}
 
-  <div class="card">
     <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign up here</a>.</p>
   </div>
 </div>
